--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "skatepark",
   "version": "1.0.0",
   "description": "Prueba - Skate Park",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,8 +23,13 @@
   },
   "homepage": "https://github.com/0x0012/Prueba---Skate-Park#readme",
   "dependencies": {
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-fileupload": "^1.4.0",
+    "express-handlebars": "^6.0.6",
+    "jquery": "^3.6.0",
+    "pg": "^8.7.3"
   }
 }
