--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
     "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3"
   }
 }
